sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:26: error: ')' expected but '}' found.
  }
  ^