sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {




  var nbVal = getNombreValeurs()

  for(i<-0 to nbVal-1){
    var copie = true
    
    var tmp = getValeur(i)
 		var n=0
    
    while((copie)&&(i-n>0){
      if(!plusPetit(i-n,i-n-1)){
        copie(i-n-1,i-n)
        n-=1
      }else{
        setValeur(i-n,tmp)
        copie=false
      }
    }
    
    
  }

}